--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>꼬들-도와줘!</title>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1845636451573321"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>꼬들</noscript>
