--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,10 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-
+    <meta name="google-adsense-account" content="ca-pub-1845636451573321">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1845636451573321"
      crossorigin="anonymous"></script>
-     
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
