--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
+    <meta name="naver-site-verification" content="341691bfceb12f7303f37ecf9d1308993334fba7" />
+
     <meta name="google-adsense-account" content="ca-pub-1845636451573321">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1845636451573321"
      crossorigin="anonymous"></script>
