카카오 애드핏

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,12 @@
     -->
     <title>꼬들-도와줘!</title>
 
+    <ins class="kakao_ad_area" style="display:none;"
+      data-ad-unit = "DAN-6xrw7uqIV1slJAmv"
+      data-ad-width = "160"
+      data-ad-height = "600"></ins>
+      <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+
   </head>
   <body>
     <noscript>꼬들</noscript>
