--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,11 @@
       data-ad-width = "160"
       data-ad-height = "600"></ins>
       <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
-
+      <ins class="kakao_ad_area" style="display:none;"
+      data-ad-unit = "DAN-5h7JxLR5oU234N9X"
+      data-ad-width = "320"
+      data-ad-height = "50"></ins>
+      <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
   </head>
   <body>
     <noscript>꼬들</noscript>
