--- a/public/index.html
+++ b/public/index.html
@@ -34,16 +34,6 @@
     -->
     <title>꼬들-도와줘!</title>
 
-    <ins class="kakao_ad_area" style="display:none;"
-      data-ad-unit = "DAN-6xrw7uqIV1slJAmv"
-      data-ad-width = "160"
-      data-ad-height = "600"></ins>
-      <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
-      <ins class="kakao_ad_area" style="display:none;"
-      data-ad-unit = "DAN-5h7JxLR5oU234N9X"
-      data-ad-width = "320"
-      data-ad-height = "50"></ins>
-      <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
   </head>
   <body>
     <noscript>꼬들</noscript>
@@ -58,5 +48,20 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <ins class="kakao_ad_area" style="display:none;"
+    data-ad-unit = "DAN-6xrw7uqIV1slJAmv"
+    data-ad-width = "728"
+    data-ad-height = "90"></ins>
+    <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+    <ins class="kakao_ad_area" style="display:none;"
+    data-ad-unit = "DAN-5h7JxLR5oU234N9X"
+    data-ad-width = "320"
+    data-ad-height = "50"></ins>
+    <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+    <ins class="kakao_ad_area" style="display:none;"
+    data-ad-unit = "DAN-h7AffDCPFpmllMcH"
+    data-ad-width = "160"
+    data-ad-height = "600"></ins>
+    <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
   </body>
 </html>
