쌍근추가 및 디스크립션 수정

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="한국어 풀어쓰기와 관련된 꼬들, 꼬오오오오들, 꼬맨틀, 쌍근 등 다양한 표현을 즐기며 풀어볼 수 있는 월급루팡 게임 링크 모음 페이지입니다. 재미있는 게임을 통해 한국어의 새로운 매력을 발견해보세요!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/gaetaeng.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
