--- a/public/index.html
+++ b/public/index.html
@@ -38,13 +38,13 @@
       <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
     </div> -->
 
-    
-    <div class="ads_bottom">
-      <ins class="kakao_ad_area" style="display:none;"
+    <ins class="kakao_ad_area" style="display:none;"
         data-ad-unit = "DAN-6xrw7uqIV1slJAmv"
         data-ad-width = "728"
         data-ad-height = "90"></ins>
       <script type="text/java script" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+    <div class="ads_bottom" style="display: inline-block; width: 100%; height: 100px;">
+      
     </div>
 
   </body>
